--- a/templates/html/profile.html
+++ b/templates/html/profile.html
@@ -18,9 +18,11 @@
     <div class="logo" onclick="window.location.href='/'">
         <img href="/" src="/templates/image/logo/logoO.png" alt=""><h2><a href="/">Forum</a></h2>
     </div>
-    <div class="header_middle">
-        <input type="text" name="search" placeholder="Search" class="search" autocomplete="off">
-    </div>
+    <form method="get" action="/search">
+        <div class="header_middle">
+            <input type="text" name="search" placeholder="Search" class="search" autocomplete="off">
+        </div>
+    </form>
     <div class="header_right">
         {{ if eq .Connected false }}
             <div class="login">
