--- a/templates/html/search.html
+++ b/templates/html/search.html
@@ -2,34 +2,69 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="templates/css/style.css">
+    <link rel="stylesheet" href="templates/css/style_index.css">
+    <link rel="stylesheet" href="templates/css/style_scrollbar.css">
+    <link rel="icon" href="/templates/image/logo/logoBO.jpg">
+    <link rel="stylesheet" href="templates/css/style_theme.css">
+    <link rel="stylesheet" href="templates/css/style_search.css">
+    <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet">
     <title>Forum</title>
 </head>
 <body>
-<div class="posts">
-    {{ if eq .Result false }}
-        <div class="noResult">
-            <p>No result</p>
+    <div class="header" oneclick="window.location.href='index.html'">
+        <div class="logo" onclick="window.location.href='/'">
+            <img href="/" src="/templates/image/logo/logoO.png" alt="">
+            <h2><a href="/">Forum</a></h2>
         </div>
-    {{ end }}
-    {{ range .Posts }}
-        <div class="post">
-            <div class="cPost">
-                <div class="title">
-                    <p><a href="/content?id={{ .Id }}">{{ .Titre }}</a></p>
-                </div>
+        <form method="get" action="/search">
+            <div class="header_middle">
+                <input type="text" name="search" placeholder="Search" class="search" autocomplete="off">
             </div>
-            <div class="cAutor">
-                <div class="autor">
-                    <p>{{ .Auteur.Username }}</p>
+        </form>
+        <div class="header_right">
+            {{ if eq .Connected false }}
+                <div class="login">
+                    <a href="/login">Connection</a>
                 </div>
-            </div>
-            <div class="cDate">
-                <div class="date">
-                    <p> {{ .Date }}</p>
+            {{ else }}
+                <div class="logout">
+                    <a href="/logout"><i class='bx bx-power-off'></i></a>
                 </div>
-            </div>
+                <div class="profil">
+                    <a href="/profile"><img src="{{ .User.Avatar }}"></a>
+                    <p>{{ .User.Username }}</p>
+                </div>
+            {{ end }}
         </div>
-    {{ end }}
-</div>
+    </div>
+    <div class="posts">
+        {{ if eq .Result false }}
+            <div class="noResult">
+                <p>No result</p>
+            </div>
+        {{ end }}
+        {{ range .Posts }}
+            <div class="post">
+                <div class="cPost">
+                    <div class="title">
+                        <p><a href="/content?id={{ .Id }}">{{ .Titre }}</a></p>
+                    </div>
+                </div>
+                <div class="cAutor">
+                    <div class="autor">
+                        <p>{{ .Auteur.Username }}</p>
+                    </div>
+                </div>
+                <div class="cDate">
+                    <div class="date">
+                        <p> {{ .Date }}</p>
+                    </div>
+                </div>
+            </div>
+        {{ end }}
+    </div>
 </body>
 </html>
