--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -57,8 +57,11 @@
                     New post
                 </a>
             </div>
-            <div>
-                <a href="/category">New Category</a>
+            <div class="new_cat">
+                <a href="/category">
+                    <i class='bx bx-list-ol'></i>
+                    New Category
+                </a>
             </div>
         {{ end }}
     </div>
